--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
+:root {
+    --primary: #e4c398;
+    --secondary: #98E4C3;
+    --third: #98B9E4;
+    --fourth: #E498DF;
+    --white: #fff;
+    --background: whitesmoke;
+    --underline: #b4b3b3;
+}
+
+html, body{
+    background-color: var(--background);
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow: hidden;
+}
+
 .main-container{
     width: 100%;
     height: 100vh;
@@ -8,8 +26,58 @@
 .content {
     margin-top: 3rem;
     overflow: auto;
+    flex: 1;
 }
 
 .center{
     margin: 0 auto;
+}
+
+@media only screen and (max-width: 620px) {
+    .header-title{
+        color: blue;
+        font-size: 2.5em !important;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .header-title{
+        color: red;
+        font-size: 1.75em !important;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .header-title{
+        color: green;
+        font-size: 1.5em !important;
+    }
+
+    .footer-title{
+        font-size: .75em !important;
+    }
+}
+header{
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family:'Bodoni';
+    margin: 20px auto;
+}
+
+.header-title{
+    font-size: 3em;
+}
+
+footer{
+    background-color: var(--third);
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-title {
+    color: var(--white);
 }
