--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ header{
 }
 
 footer{
-    background-color: var(--secondary);
+    background-color: var(--primary);
     height: 2rem;
     display: flex;
     justify-content: center;
