--- a/src/App.css
+++ b/src/App.css
@@ -69,10 +69,10 @@ img {
     width: 6rem;
 }
 
-.react-pdf__Page__canvas {
-    margin: 0 auto;
+embed {
+    margin: 0 auto !important;
     width: 100% !important;
-    height: 500px !important;
+    height: 100% !important;
     object-fit: contain !important;
 }
 
